build: Publish a multi-arch container image